# polypose

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/polypose/: loss.py  models.py  plot.py  renderer.py  warp.py  weights.py
